# BotTemplate

./: LICENSE  README.md  pyproject.toml  requirements.txt
bot/: main.py
bot/config/: advertisement.py  cfg.py
bot/database/: models.py  services.py
bot/events/: error_handler.py  states_group.py
bot/handlers/: commands_handler.py
bot/handlers/utils/: mailing.py
bot/middleware/: trottling.py
migrations/models/: 0_20250805151640_init.py
src/: main.py
src/config/: advertisement.py  cfg.py  db.py
src/database/: abstract.py  models.py  services.py
src/elements/inline/: other_inline.py
src/elements/keybord/: kb.py
src/events/: states_group.py
src/handlers/: commands_handler.py
src/handlers/utils/: mailing.py
